--- a/pom.xml
+++ b/pom.xml
@@ -296,6 +296,29 @@
       <!-- commons end  -->
 
 
+      <!-- 网络爬虫  start  -->
+      <!--  HTTP协议的客户端编程工具包 -->
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.0</version>
+      </dependency>
+
+      <!-- HTML解析器  -->
+      <dependency>
+        <groupId>org.htmlparser</groupId>
+        <artifactId>htmlparser</artifactId>
+        <version>2.1</version>
+      </dependency>
+
+      <!-- HTML解析器 -->
+      <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>1.10.2</version>
+      </dependency>
+      <!-- 网络爬虫   end  -->
+
       <!-- ftp start  -->
       <dependency>
         <groupId>org.apache.camel</groupId>
@@ -369,6 +392,7 @@
 
 
 
+      <!-- 单元测试    -->
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
