--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,18 @@
     <connection>scm:svn:http://svncode.cnsuning.com/svn/vgs-lifesquare/trunk/${project.name}</connection>
   </scm>
 
+  <repositories>
+    <repository>
+      <id>code_repo</id>
+      <url>http://192.168.70.107:8081/nexus/content/repositories/public/</url>
+    </repository>
+  </repositories>
+
   <modules>
     <module>../epl-platform-framework</module>
-    <!-- <module>../epl-platform-common</module> -->
+    <!-- <module>../epl-platform-common</module> 
     <module>../epl-gateway-etl</module>
-    <module>../epl-gateway-web</module>
+    <module>../epl-gateway-web</module> -->
   </modules>
 
   <properties>
@@ -30,7 +37,14 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <!-- 编译时的编码 -->
     <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-
+    
+    <!-- JDK版本号 -->
+    <jdk.version>1.5</jdk.version>
+    <!-- spring版本号 -->
+    <spring.version>4.0.2.RELEASE</spring.version>
+    <!-- mybatis版本号 -->
+    <mybatis.version>3.2.6</mybatis.version>
+    
     <!--  本地jar目录 -->
     <local.jar.dir>${basedir}/../epl-parent-pom/lib</local.jar.dir>
   </properties>
@@ -44,8 +58,7 @@
           <artifactId>maven-resources-plugin</artifactId>
           <version>2.4.1</version>
           <configuration>
-            <!-- 指定编码格式，否则在DOS下运行mvn命令时当发生文件资源copy时将使用系统默认使用GBK编码 -->
-            <encoding>UTF-8</encoding>
+            <encoding>${project.build.sourceEncoding}</encoding>
           </configuration>
         </plugin>
 
@@ -54,10 +67,9 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>2.3.2</version>
           <configuration>
-            <source>1.5</source>
-            <target>1.5</target>
-            <!-- 增加字符编码，要与项目编码一致 ，否则在DOS下运行mvn compile命令时会出现莫名的错误，因为系统默认使用GBK编码-->
-            <encoding>UTF-8</encoding>
+            <source>${jdk.version}</source>
+            <target>${jdk.version}</target>
+            <encoding>${project.build.sourceEncoding}</encoding>
           </configuration>
         </plugin>
 
@@ -128,6 +140,14 @@
       </dependency>
 
 
+      <!-- 导入java ee jar 包 -->
+      <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-api</artifactId>
+        <version>7.0</version>
+      </dependency>
+
+
       <!--  本地jar Start -->
       <dependency>
         <groupId>db2jcc</groupId>
@@ -187,7 +207,6 @@
 
       <!-- DB Driver End  -->
 
-
       <!--  Struts2  Start -->
       <dependency>
         <groupId>org.apache.struts</groupId>
@@ -200,6 +219,8 @@
         <version>2.0.8</version>
       </dependency>
       <!--  Struts2  End -->
+
+
 
       <!--  Spring 1 Start -->
       <dependency>
@@ -231,10 +252,95 @@
         <version>1.5.4</version>
       </dependency>
 
+
+
+      <!-- spring核心包 -->
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-oxm</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-tx</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aop</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+
+      <!-- mybatis核心包 -->
+      <dependency>
+        <groupId>org.mybatis</groupId>
+        <artifactId>mybatis</artifactId>
+        <version>${mybatis.version}</version>
+      </dependency>
+
+      <!-- mybatis/spring包 -->
+      <dependency>
+        <groupId>org.mybatis</groupId>
+        <artifactId>mybatis-spring</artifactId>
+        <version>1.2.2</version>
+      </dependency>
+
+
+
       <dependency>
         <groupId>jfree</groupId>
         <artifactId>jfreechart</artifactId>
         <version>1.0.0</version>
+      </dependency>
+
+      <!-- JSON -->
+      <!-- spring注解制定jackson做json数据转换 见MappingJacksonHttpMessageConverter类 的ObjectMapper -->
+      <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-mapper-asl</artifactId>
+        <version>1.8.3</version>
+      </dependency>
+
+      <!-- 格式化对象，方便输出日志 -->
+      <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>1.1.41</version>
       </dependency>
 
       <dependency>
@@ -244,21 +350,30 @@
         <classifier>jdk15</classifier>
       </dependency>
 
+      <!-- JSON -->
 
-      <!-- commons start  -->
+      <!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->
       <dependency>
         <groupId>commons-dbcp</groupId>
         <artifactId>commons-dbcp</artifactId>
-        <version>1.3</version>
+        <version>1.2.2</version>
       </dependency>
 
+
+      <!-- commons start  -->
+
+      <!-- 上传组件包 -->
+      <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>1.3.1</version>
+      </dependency>
       <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>2.1</version>
       </dependency>
-
 
       <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
       <dependency>
@@ -267,13 +382,12 @@
         <version>2.1</version>
       </dependency>
 
-
-      <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+      <!-- 公共的编解码实现 -->
       <dependency>
-        <groupId>commons-fileupload</groupId>
-        <artifactId>commons-fileupload</artifactId>
-        <version>1.3.2</version>
-      </dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>1.5</version>
+      </dependency> 
 
       <dependency>
         <groupId>commons-beanutils</groupId>
@@ -362,8 +476,15 @@
       </dependency>
       <!-- excel end  -->
 
+      <!-- JSTL标签类 -->
+      <dependency>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+      </dependency>
 
 
+      <!-- 日志文件管理包 -->
       <!-- logback+slf4j start -->
       <dependency>
         <groupId>org.slf4j</groupId>
@@ -397,6 +518,7 @@
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.10</version>
+        <!-- 表示开发的时候引入，发布的时候不会加载此包 -->
         <scope>test</scope>
       </dependency>
 
