--- a/pom.xml
+++ b/pom.xml
@@ -17,17 +17,26 @@
     <connection>scm:svn:http://svncode.cnsuning.com/svn/vgs-lifesquare/trunk/${project.name}</connection>
   </scm>
 
-  <!-- Maven 仓库  -->
-  <repositories>
+  <!--
+    Maven 仓库 <repositories> <repository> <id>code_repo</id> <url>http://maven.oschina.net/content/groups/public/</url> </repository> </repositories>
+  -->
+
+  <distributionManagement>
     <repository>
-      <id>code_repo</id>
-      <url>http://maven.oschina.net/content/groups/public/</url>
+      <id>nexus-snapshots</id>
+      <name>Internal Release Repository</name>
+      <url>http://10.243.119.52:8081/nexus/content/repositories/releases/</url>
     </repository>
-  </repositories>
+    <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <name>Internal Snapshot Repository</name>
+      <url>http://10.243.119.52:8081/nexus/content/repositories/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 
 
   <modules>
-    <module>../epl-platform-core</module> 
+    <module>../epl-platform-core</module>
     <module>../epl-platform-framework</module>
     <!-- 
     <module>../epl-gateway-etl</module>
@@ -43,87 +52,16 @@
 
     <!-- JDK版本号 -->
     <jdk.version>1.6</jdk.version>
-    <!-- spring版本号 -->
-    <spring.version>4.0.2.RELEASE</spring.version>
+    <!-- spring版本号  4.0.2.RELEASE  3.0.6.RELEASE -->
+    <spring.version>3.0.6.RELEASE</spring.version>
     <aspectj.version>1.5.4</aspectj.version>
     <!-- mybatis版本号 -->
     <mybatis.version>3.2.6</mybatis.version>
-
+    <hibernate.version>3.5.6-Final</hibernate.version>
+    <struts.version>2.0.8</struts.version>
     <!--  本地jar目录 -->
     <local.jar.dir>${basedir}/../epl-parent-pom/lib</local.jar.dir>
   </properties>
-
-  <build>
-    <pluginManagement>
-      <plugins>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>2.4.1</version>
-          <configuration>
-            <encoding>${project.build.sourceEncoding}</encoding>
-          </configuration>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
-          <configuration>
-            <source>${jdk.version}</source>
-            <target>${jdk.version}</target>
-            <encoding>${project.build.sourceEncoding}</encoding>
-          </configuration>
-        </plugin>
-
-        <!-- war 包插件  -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>2.1.1</version>
-          <configuration>
-            <warName>${project.artifactId}</warName>
-            <webResources>
-              <resource>
-                <directory>${local.jar.dir}</directory>
-                <targetPath>WEB-INF/lib</targetPath>
-                <includes>
-                  <include>**/*.jar</include>
-                </includes>
-              </resource>
-            </webResources>
-            <archive>
-              <!-- 打包后不包括pom的描述文件 -->
-              <addMavenDescriptor>false</addMavenDescriptor>
-            </archive>
-          </configuration>
-        </plugin>
-
-
-        <!-- jar 包插件  -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.1</version>
-          <configuration>
-            <descriptorRefs>
-              <descriptorRef>jar-with-dependencies</descriptorRef>
-            </descriptorRefs>
-          </configuration>
-        </plugin>
-
-        <!-- Jetty 插件 -->
-        <plugin>
-          <groupId>org.mortbay.jetty</groupId>
-          <artifactId>jetty-maven-plugin</artifactId>
-          <version>7.0.2.v20100331</version>
-        </plugin>
-
-      </plugins>
-    </pluginManagement>
-  </build>
-
 
   <dependencyManagement>
     <dependencies>
@@ -134,7 +72,7 @@
       </dependency>
       <dependency>
         <groupId>com.soak</groupId>
-        <artifactId>framework</artifactId>
+        <artifactId>jdbc</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -230,15 +168,14 @@
       <dependency>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-core</artifactId>
-        <version>2.0.8</version>
+        <version>${struts.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-spring-plugin</artifactId>
-        <version>2.0.8</version>
+        <version>${struts.version}</version>
       </dependency>
       <!--  Struts2  End -->
-
 
 
       <!--  Spring 1 Start -->
@@ -265,6 +202,21 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-core</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-beans</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
         <version>${spring.version}</version>
       </dependency>
       <dependency>
@@ -299,15 +251,18 @@
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
-        <artifactId>spring-context-support</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
         <artifactId>spring-test</artifactId>
         <version>${spring.version}</version>
       </dependency>
-      
+      <!-- spring jms  -->
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jms</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+
+
+
       <!-- AOP aspectj  -->
       <dependency>
         <groupId>org.aspectj</groupId>
@@ -335,14 +290,30 @@
       </dependency>
 
 
-
-
+      <!-- hibernate -->
       <dependency>
-        <groupId>jfree</groupId>
-        <artifactId>jfreechart</artifactId>
-        <version>1.0.0</version>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>${hibernate.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-ehcache</artifactId>
+        <version>${hibernate.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-annotations</artifactId>
+        <version>${hibernate.version}</version>
+      </dependency>
+      <!-- hibernate -->
+      <dependency>
+        <groupId>org.javassist</groupId>
+        <artifactId>javassist</artifactId>
+        <version>3.13.0-GA</version>
+      </dependency>
+      
+      
       <!-- JSON -->
       <!-- spring注解制定jackson做json数据转换 见MappingJacksonHttpMessageConverter类 的ObjectMapper -->
       <dependency>
@@ -408,7 +379,7 @@
         <artifactId>commons-email</artifactId>
         <version>1.1</version>
       </dependency>
-      
+
       <!-- Email -->
       <dependency>
         <groupId>javax.mail</groupId>
@@ -498,13 +469,29 @@
         <version>1.2</version>
       </dependency>
 
-
-      <!-- 缓存 -->
+      <!-- 二级缓存ehcache -->
       <dependency>
         <groupId>net.sf.ehcache</groupId>
         <artifactId>ehcache-core</artifactId>
         <version>2.5.6</version>
       </dependency>
+
+
+
+      <!-- activemq -->
+      <dependency>
+        <groupId>org.apache.activemq</groupId>
+        <artifactId>activemq-core</artifactId>
+        <version>5.7.0</version>
+      </dependency>
+
+
+      <dependency>
+        <groupId>jfree</groupId>
+        <artifactId>jfreechart</artifactId>
+        <version>1.0.0</version>
+      </dependency>
+
 
       <!-- 日志文件管理包 -->
       <!-- logback+slf4j start -->
@@ -547,5 +534,75 @@
     </dependencies>
 
   </dependencyManagement>
+
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>2.4.1</version>
+          <configuration>
+            <encoding>${project.build.sourceEncoding}</encoding>
+          </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.3.2</version>
+          <configuration>
+            <source>${jdk.version}</source>
+            <target>${jdk.version}</target>
+            <encoding>${project.build.sourceEncoding}</encoding>
+          </configuration>
+        </plugin>
+
+        <!-- war 包插件  -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>2.1.1</version>
+          <configuration>
+            <warName>${project.artifactId}</warName>
+            <webResources>
+              <resource>
+                <directory>${local.jar.dir}</directory>
+                <targetPath>WEB-INF/lib</targetPath>
+                <includes>
+                  <include>**/*.jar</include>
+                </includes>
+              </resource>
+            </webResources>
+            <archive>
+              <!-- 打包后不包括pom的描述文件 -->
+              <addMavenDescriptor>false</addMavenDescriptor>
+            </archive>
+          </configuration>
+        </plugin>
+
+        <!-- jar 包插件  -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.1</version>
+          <configuration>
+            <descriptorRefs>
+              <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+          </configuration>
+        </plugin>
+
+        <!-- Jetty 插件 -->
+        <plugin>
+          <groupId>org.mortbay.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <version>7.0.2.v20100331</version>
+        </plugin>
+
+      </plugins>
+    </pluginManagement>
+  </build>
 
 </project>
