--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,12 @@
   -->
 
   <distributionManagement>
-    <repository>
-      <id>nexus-snapshots</id>
-      <name>Internal Release Repository</name>
-      <url>http://10.243.119.52:8081/nexus/content/repositories/releases/</url>
-    </repository>
+      <repository>
+        <id>ebi</id>
+        <name>www.ebi.ac.uk</name>
+        <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public/</url>
+      </repository>
+      
     <snapshotRepository>
       <id>nexus-snapshots</id>
       <name>Internal Snapshot Repository</name>
