--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
 
   <modules>
     <module>../epl-platform-core</module>
-    <module>../epl-platform-framework</module>
     <!-- 
+    <module>../epl-platform-framework</module>
     <module>../epl-gateway-etl</module>
     <module>../epl-gateway-web</module> -->
   </modules>
@@ -90,7 +90,7 @@
         <version>6.0</version>
       </dependency>
 
-     
+
       <!-- 注解  -->
       <dependency>
         <groupId>javax.persistence</groupId>
@@ -322,30 +322,24 @@
         <version>3.13.0-GA</version>
       </dependency>
 
-
-      <!-- JSON -->
-      <!-- spring注解制定jackson做json数据转换 见MappingJacksonHttpMessageConverter类 的ObjectMapper -->
+      <!-- JSON Start -->
+      <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-core-asl</artifactId>
+        <version>1.8.3</version>
+      </dependency>
       <dependency>
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-mapper-asl</artifactId>
         <version>1.8.3</version>
       </dependency>
-
-      <!-- 格式化对象，方便输出日志 -->
-      <dependency>
-        <groupId>com.alibaba</groupId>
-        <artifactId>fastjson</artifactId>
-        <version>1.1.41</version>
-      </dependency>
-
       <dependency>
         <groupId>net.sf.json-lib</groupId>
         <artifactId>json-lib</artifactId>
         <version>2.4</version>
         <classifier>jdk15</classifier>
       </dependency>
-
-      <!-- JSON -->
+      <!-- JSON End -->
 
 
       <!-- commons start  -->
