--- a/pom.xml
+++ b/pom.xml
@@ -589,12 +589,26 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.1</version>
+          <version>2.2</version>
           <configuration>
+            <descriptors>
+              <descriptor>assembly.xml</descriptor>
+            </descriptors>
             <descriptorRefs>
               <descriptorRef>jar-with-dependencies</descriptorRef>
             </descriptorRefs>
           </configuration>
+
+          <!--  备注：第2步的命令也可以改成mvn package，但需要更改pom.xml , 在pom文件的build节点中添加这个插件的引用：  -->
+          <executions>
+            <execution>
+              <id>make-assembly</id>
+              <phase>package</phase>
+              <goals>
+                <goal>single</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
 
         <!-- Jetty 插件 -->
