logback async config

--- a/pom.xml
+++ b/pom.xml
@@ -496,7 +496,7 @@
       </dependency>
 
 
-      <!-- 日志文件管理包 -->
+      <!-- 日志文件管理包   0.9.28 -->
       <!-- logback+slf4j start -->
       <dependency>
         <groupId>org.slf4j</groupId>
@@ -508,12 +508,12 @@
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-core</artifactId>
-        <version>0.9.28</version>
+        <version>1.0.4</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <version>0.9.28</version>
+        <version>1.0.4</version>
         <type>jar</type>
       </dependency>
       <dependency>
