--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
     <!-- JDK版本号 -->
     <jdk.version>1.6</jdk.version>
     <!-- spring版本号  4.0.2.RELEASE  3.0.6.RELEASE -->
-    <spring.version>3.0.6.RELEASE</spring.version>
+    <spring.version>3.1.0.RELEASE</spring.version>
     <aspectj.version>1.5.4</aspectj.version>
     <!-- mybatis版本号 -->
     <mybatis.version>3.2.6</mybatis.version>
@@ -187,23 +187,11 @@
       <!--  Struts2  End -->
 
 
-      <!--  Spring 1 Start -->
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring</artifactId>
-        <version>1.1.5</version>
-      </dependency>
-      <dependency>
-        <groupId>aopalliance</groupId>
-        <artifactId>aopalliance</artifactId>
-        <version>1.0</version>
-      </dependency>
-      <!--  Spring 1 End -->
 
       <dependency>
         <groupId>quartz</groupId>
         <artifactId>quartz</artifactId>
-        <version>1.3.4</version>
+        <version>1.5.2</version>
       </dependency>
 
 
@@ -216,6 +204,11 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
         <version>${spring.version}</version>
       </dependency>
       <dependency>
@@ -332,12 +325,6 @@
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-mapper-asl</artifactId>
         <version>1.8.3</version>
-      </dependency>
-      <dependency>
-        <groupId>net.sf.json-lib</groupId>
-        <artifactId>json-lib</artifactId>
-        <version>2.4</version>
-        <classifier>jdk15</classifier>
       </dependency>
       <!-- JSON End -->
 
