--- a/pom.xml
+++ b/pom.xml
@@ -409,6 +409,14 @@
       </dependency>
       <!-- 网络爬虫   end  -->
 
+
+      <!-- https://mvnrepository.com/artifact/io.netty/netty -->
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty</artifactId>
+        <version>3.3.0.Final</version>
+      </dependency>
+
       <!-- ftp start  -->
       <dependency>
         <groupId>org.apache.camel</groupId>
